--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
         <div class="row justify-content-center">
           <div class="col-lg-6 justify-content-center d-flex">
             <figure class="figure">
-              <img src="IMG/img1.png" class="figure-img img-fluid rounded-circle" alt="Testi 1">
+              <img src="img/img1.png" class="figure-img img-fluid rounded-circle" alt="Testi 1">
             </figure>
             <figure class="figure">
-              <img src="IMG/img2.png" class="figure-img img-fluid rounded-circle utama" alt="Testi 2">
+              <img src="img/img2.png" class="figure-img img-fluid rounded-circle utama" alt="Testi 2">
               <figcaption class="figure-caption">
                 <h5>Sunny Ye</h5>
                 <p>Designer</p>
               </figcaption>
             </figure>
             <figure class="figure">
-              <img src="IMG/img3.png" class="figure-img img-fluid rounded-circle" alt="Testi 3">
+              <img src="img/img3.png" class="figure-img img-fluid rounded-circle" alt="Testi 3">
             </figure>
           </div>
         </div>
